--- a/config.toml
+++ b/config.toml
@@ -12,7 +12,7 @@ pygmentsStyle          = "monokai"
 [params]
   footer         = "Tim Holzschuh"
   greeting       = "Hi!"
-  description    = "I'm a mathematician based at <a href="https://www.mathinf.uni-heidelberg.de/en">Heidelberg University</a> working with <a href="https://www.mathi.uni-heidelberg.de/~schmidt/">Alexander Schmidt</a>."
+  description    = "I'm a mathematician based at Heidelberg University working with Alexander Schmidt."
   email          = "tholzschuh[at]mathi.uni-heidelberg.de"
   avatarURL      = "/images/octopus.png"
   avatarSize     = "size-m"
