--- a/config.toml
+++ b/config.toml
@@ -12,8 +12,10 @@ pygmentsStyle          = "monokai"
 [params]
   footer         = "Tim Holzschuh"
   greeting       = "Hi!"
-  description    = "I'm a mathematician based at Heidelberg University working with Alexander Schmidt."
-  email          = "tholzschuh[at]mathi.uni-heidelberg.de"
+  firstSubtitle  = "I'm a mathematician based at Heidelberg University working with Alexander Schmidt."
+  secondSubtitle = "I like to think about all things arithmetic homotopy theory."
+  description    = ""
+  email          = "tholzschuh [at] mathi.uni-heidelberg.de"
   avatarURL      = "/images/octopus.png"
   avatarSize     = "size-m"
   accentColor    = "#0982f0"
