finalized the website

--- a/config.toml
+++ b/config.toml
@@ -13,7 +13,8 @@ pygmentsStyle          = "monokai"
   footer         = "Tim Holzschuh"
   greeting       = "Hi!"
   email          = "tholzschuh [at] mathi.uni-heidelberg.de"
-  avatarURL      = "/images/octopus.png"
+  avatarURL      = "/images/tim.jpg"
+  avatarLink     = "/images/debiesbosch.jpg"
   avatarSize     = "size-xl"
   accentColor    = "#0982f0"
   customHeadHTML = """
