--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "themes/gokarna"]
 	path = themes/gokarna
 	url = git@github.com:tholzschuh/gokarna.git
+[submodule "themes/hugo-shortcode-gallery"]
+	path = themes/hugo-shortcode-gallery
+	url = https://github.com/tholzschuh/hugo-shortcode-gallery.git
