--- a/config.toml
+++ b/config.toml
@@ -59,17 +59,17 @@ pygmentsStyle          = "monokai"
     url    = "/tags/"
     weight = 6
 
-#  [[menu.main]]
-#    identifier = "github"
-#    pre        = "<span data-feather='github'></span>"
-#    url        = "https://github.com/tholzschuh"
-#    weight     = 7
+  [[menu.main]]
+    identifier = "github"
+    pre        = "<span data-feather='github'></span>"
+    url        = "https://github.com/tholzschuh"
+    weight     = 7
 
 #  [[menu.main]]
 #    identifier = "rss"
 #    pre = "<span data-feather='rss'></span>"
 #    url = "/index.xml"
-#    weight = 8
+#    weight = 9
 
 [markup]
   [markup.tableOfContents]
